[package]
name = "solfi-light-protocol-v"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
url = "2.2.2"
dirs = "5.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
sha2 = "0.10.6"
hex = "0.4.3"
solana-sdk = "2.0.13"
solana-client = "2.0.13"
spl-token = "6.0.0"
spl-associated-token-account = "5.0.1"
spl-memo = "5.0.0"
solana-transaction-status = "2.0.13"
light-sdk = "0.11.0"  
tokio = { version = "1.39.3", features = ["full"] }


bytemuck = "1.17"

groth16-solana = "0.0.3"
borsh = "1.5.1"


